// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\` */
export function loadConfig(_) {}
export function readUserRc(_) {}
export function removeUserRc(_) {}
export function updateUserRc(_, _) {}
export function upsertUserRc(_, _) {}
export function writeUserRc(_, _) {}"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\` */
// Types
export type ConfigLayerMeta = _ConfigLayerMeta;
export type LoadConfigOptions<
	T extends UserInputConfig = UserInputConfig,
	MT extends ConfigLayerMeta = ConfigLayerMeta
> = _LoadConfigOptions<T, MT>;
export type RC = Record<string, any>;
export type RCOptions = typeof defaults;

// Functions
export declare function loadConfig<
	M extends UserInputConfig = UserInputConfig,
	MT extends ConfigLayerMeta = ConfigLayerMeta
>(_?: LoadConfigOptions<M, MT>): Promise<ResolvedConfig<M, MT>>;
export declare function readUserRc(_?: RCOptions): RC;
export declare function removeUserRc(_?: RCOptions): void;
export declare function updateUserRc(_: RC, _?: RCOptions): RC;
export declare function upsertUserRc(_: RC, _?: RCOptions): void;
export declare function writeUserRc(_: RC, _?: RCOptions): void;"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\` */
export { appdata }
export { homedir }
export { localAppdata }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\` */
// Functions
export declare function appdata(..._: string[]): string;
export declare function homedir(..._: string[]): string;
export declare function localAppdata(..._: string[]): string;"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\` */
export { copyFile }
export { createSymlink }
export { ensureDirectory }
export { exists }
export { isDirectory }
export { isSymbolicLink }
export { remove }
export { removeSymlink }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\` */
// Functions
export declare function copyFile(_: string, _: string, _?: boolean): boolean;
export declare function createSymlink(_: string, _: string, _?: boolean): boolean;
export declare function ensureDirectory(_: string): boolean;
export declare function exists(_: string): boolean;
export declare function isDirectory(_: string): boolean;
export declare function isSymbolicLink(_: string): boolean;
export declare function remove(_: string, _?: boolean): boolean;
export declare function removeSymlink(_: string): boolean;"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\` */
export { important }
export { info }
export { success }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\` */
// Functions
export declare function important(_: string): string;
export declare function info(_: string): string;
export declare function success(_: string): string;"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\` */
// Interfaces
export interface BasicOptions {
	verbose?: boolean;
	dryRun?: boolean;
}"
`;

exports[`exports-snapshot/starship-butler starship-butler/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\` */
export { defineButlerConfig }
export { loadConfig }"
`;

exports[`exports-snapshot/starship-butler starship-butler/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\` */
// Interfaces
export interface ButlerConfig {
	"config-provider"?: ConfigProviderOptions;
}

// Types
export type SafeButlerConfig = Omit<ButlerConfig, "config-provider"> & {
	"config-provider"?: Omit<ConfigProviderOptions, "version">;
};

// Functions
export declare function defineButlerConfig(_: SafeButlerConfig): SafeButlerConfig;
export declare function loadConfig(_?: RCOptions & LoadConfigOptions<ButlerConfig>): Promise<ButlerConfig>;"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\` */
// Interfaces
export interface ConfigProviderOptions {
	preset?: PresetOptions & {
		rime?: {
			ctrlSpaceDisabled?: boolean;
		};
	};
	set?: SetOptions;
	version?: string;
}"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\` */
export async function commandSet(_, _, _) {}
export function validateOptions(_) {}"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\` */
// Types
export type SetOptions = ProcessConfigOptions;

// Functions
export declare function commandSet(_: string, _: string, _: SetOptions): Promise<void>;
export declare function validateOptions(_: SetOptions): boolean;"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\` */
export async function commandPreset(_) {}
export async function filterActions(_) {}
export class HandlerError extends Error {
  constructor(_) {}
}
export function validateOptions(_) {}"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\` */
// Interfaces
export interface Action extends ActionBase {
	destination: string | DestinationHandler;
	prehandler?: ActionHandler;
	handler: ActionHandler;
	posthandler?: ActionHandler;
}
export interface ActionHandlerContext extends ActionBase {
	destination: string;
	options: PresetOptions;
}
export interface PresetOptions extends ProcessConfigOptions {
	include?: Arrayable<string>;
	exclude?: Arrayable<string>;
	all?: boolean;
	list?: boolean;
}

// Types
export type ActionFactory = () => Action | undefined;
export type ActionHandler = (_: ActionHandlerContext) => Awaitable<void>;
export type ConfigPathGenerator = (_: ActionHandlerContext) => Nullable<{
	source: string;
	target: string;
}>;
export type DestinationHandler = (_: Omit<ActionHandlerContext, "destination">) => Awaitable<string | undefined>;
export type PlatformDestinationMap = Partial<Record<NodeJS.Platform, string>>;

// Classes
export declare class HandlerError extends Error {
	constructor(_: string);
}

// Functions
export declare function commandPreset(_: PresetOptions): Promise<void>;
export declare function filterActions(_: PresetOptions): Promise<Action[]>;
export declare function validateOptions(_: PresetOptions): boolean;"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\` */
export { processConfig }
export { readUserRc }
export { upsertUserRc }"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\` */
// Interfaces
export interface ProcessConfigOptions extends BasicOptions {
	mode?: "copy-paste" | "symlink";
	useGlob?: boolean;
	force?: boolean;
	agreeToForce?: boolean;
	dryRun?: boolean;
}

// Functions
export declare function processConfig(_: string, _: string, _?: ProcessConfigOptions): void;
export declare function readUserRc(_?: RCOptions): RC;
export declare function upsertUserRc(_: RC, _?: RCOptions): void;"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\` */
export { ASSETS_FOLDER }
export { PKG_ROOT }"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\` */
// Variables
export declare const ASSETS_FOLDER: string;
export declare const PKG_ROOT: string;"
`;
